--- a/views/layout/header.html
+++ b/views/layout/header.html
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 <nav class="bg-gradient-to-tr from-gray-900 to-gray-600 p-4 text-white">
   <div class="container mx-auto flex justify-between items-center">
-    <div class="text-2xl font-bold">Derek Garnett</div>
-    <a href="#contact">Contact</a>
+    <a href="/"><div class="text-2xl font-bold">Derek Garnett</div></a>
+    <a href="/#contact">Contact</a>
   </div>
 </nav>
