--- a/views/blog.html
+++ b/views/blog.html
@@ -2,21 +2,16 @@
   <div class="max-w-xl mx-auto">
     <h2 class="text-2xl font-semibold">Blog</h2>
 
-    {{ range $blog := .Blogs }}
-    <div class="my-8 p-4 bg-white rounded-md shadow-md">
-      <h3 class="text-xl font-semibold mb-2">{{ $blog.Title }}</h3>
-      <p class="text-gray-600">{{ $blog.Date.Format "January 2, 2006" }}</p>
-
-      <div md class="mt-4 whitespace-pre">{{ $blog.Content }}</div>
+    {{ if eq .Environment "development" }}
+    <div class="max-w-xl my-4 mx-auto bg-white p-6 rounded-md shadow-md">
+      {{ template "partials/blog-form" }}
     </div>
     {{ end }}
-  </div>
 
-  {{ if eq .Environment "development" }}
-  <div class="max-w-xl mx-auto bg-white p-6 rounded-md shadow-md">
-    {{ template "partials/blog-form" }}
+    <div id="blog-list">
+      {{ range .Blogs }} {{ template "partials/blog-post" . }} {{ end }}
+    </div>
   </div>
-  {{ end }}
 </div>
 
 <script>
