--- a/views/layout/footer.html
+++ b/views/layout/footer.html
@@ -1,6 +1,5 @@
 <footer class="bg-gradient-to-tr from-gray-900 to-gray-600 text-white py-4">
   <div class="container mx-auto text-center">
-    &copy; {{.Year}} Derek Garnett - Tech Solutions Specialist. All rights
-    reserved.
+    &copy; {{.Year}} Derek Garnett - Tech Solutions Specialist.
   </div>
 </footer>
