--- a/views/blog.html
+++ b/views/blog.html
@@ -2,7 +2,7 @@
   <div class="max-w-xl mx-auto">
     <h2 class="text-2xl font-semibold">Blog</h2>
 
-    {{ if eq .Environment "development" }}
+    {{ if .IsAdmin }}
     <div class="max-w-xl my-4 mx-auto bg-white p-6 rounded-md shadow-md">
       {{ template "partials/blog-form" }}
     </div>
