--- a/views/layout/header.html
+++ b/views/layout/header.html
@@ -1,6 +1,9 @@
 <!-- Navigation -->
 <nav class="bg-gradient-to-tr from-gray-900 to-gray-600 p-4 text-white">
-  <div class="container mx-auto flex justify-between items-center">
+  <div
+    class="container mx-auto flex justify-between items-center"
+    hx-boost="true"
+  >
     <a href="/"><div class="text-2xl font-bold">Derek Garnett</div></a>
     <a href="/#contact">Contact</a>
   </div>
