--- a/components/layout/layout.templ
+++ b/components/layout/layout.templ
@@ -48,8 +48,15 @@ templ Header(c *fiber.Ctx) {
     <div
       class="container mx-auto flex justify-between items-center"
     >
-      <a href="/"><div class="text-2xl font-bold">Derek Garnett</div></a>
-      <a href="/#contact">Contact</a>
+      <a href="/" class="flex-1"><div class="text-2xl font-bold">Derek Garnett</div></a>
+      <span
+        class="container mx-auto flex justify-end items-center gap-2 flex-1"
+      >
+        <a href="/#contact">Contact</a>
+        if c.Locals("IsAdmin") == true {
+          <a href="/blog">Thoughts</a>
+        }
+      </span>
     </div>
   </nav>
 }
