--- a/components/landing/landing.templ
+++ b/components/landing/landing.templ
@@ -4,6 +4,7 @@ import (
 	"github.com/drkgrntt/htmx-test/components/layout"
 	"github.com/drkgrntt/htmx-test/components/contact"
 	"github.com/gofiber/fiber/v2"
+  "fmt"
 )
 
 templ Page(c *fiber.Ctx) {
@@ -30,38 +31,102 @@ templ LandingPage() {
     </a>
   </header>
 
-  <section class="py-8 px-4">
-    <div class="container mx-auto">
-      <h2 class="text-2xl font-bold mb-4">About Me</h2>
+  @section("About Me", "") {
+    <p class="text-lg pb-4 text-gray-700 leading-relaxed">
+      Hi! I'm Derek, a results-driven software specialist with a knack for
+      turning ideas into powerful digital solutions. From creating sleek web
+      apps to solving complex problems, I bring creativity and technical
+      expertise to every project.
+    </p>
 
-      <p class="text-lg pb-4 text-gray-700 leading-relaxed">
-        Hi! I'm Derek, a results-driven software specialist with a knack for
-        turning ideas into powerful digital solutions. From creating sleek web
-        apps to solving complex problems, I bring creativity and technical
-        expertise to every project.
-      </p>
+    <p class="text-lg pb-4 text-gray-700 leading-relaxed">
+      With a background in all aspects of software engineering, I thrive in
+      solving business problems using software. I'm not just about writing code;
+      I'm about crafting experiences that make a lasting impact.
+    </p>
 
-      <p class="text-lg pb-4 text-gray-700 leading-relaxed">
-        With a background in all aspects of software engineering, I thrive in
-        solving business problems using software. I'm not just about writing code;
-        I'm about crafting experiences that make a lasting impact.
-      </p>
+    <p class="text-lg pb-4 text-gray-700 leading-relaxed">
+      Let's build something amazing together. Whether you need a robust backend,
+      an intuitive frontend, or both - I've got you covered. Ready to bring your
+      digital vision to life? <a href="#contact">Let's chat!</a>
+    </p>
+  }
 
-      <p class="text-lg pb-4 text-gray-700 leading-relaxed">
-        Let's build something amazing together. Whether you need a robust backend,
-        an intuitive frontend, or both - I've got you covered. Ready to bring your
-        digital vision to life? Let's chat!
+  @section("Working With Me", "bg-gray-200") {
+    <div class="border rounded-lg p-4 bg-white shadow-md mb-4">
+      <p class="text-lg text-gray-700 mb-2">
+        "Derek stands out for his exceptional communication and time management skills. His ability to bridge diverse
+        technical backgrounds and tackle complex projects makes him an invaluable asset."
       </p>
+      <p class="text-sm text-gray-600">- Ben</p>
+    </div>
+
+    <div class="border rounded-lg p-4 bg-white shadow-md mb-4">
+      <p class="text-lg text-gray-700 mb-2">
+        "Derek is a dedicated leader with a knack for clear communication and problem-solving.
+        He consistently delivers high-quality work, ensuring project success."
+      </p>
+      <p class="text-sm text-gray-600">- Nicole</p>
+    </div>
+
+    <div class="border rounded-lg p-4 bg-white shadow-md mb-4">
+      <p class="text-lg text-gray-700 mb-2">
+        "Derek's intuitive design approach and efficient work ethic make him a standout programmer.
+        He's approachable, communicative, and always willing to support team members."
+      </p>
+      <p class="text-sm text-gray-600">- Tim</p>
+    </div>
+
+    <div class="border rounded-lg p-4 bg-white shadow-md mb-4">
+      <p class="text-lg text-gray-700 mb-2">
+        "Derek is a smart, adaptable software engineer, excelling in clean, well-commented code.
+        He's a team player, with strong debugging and problem-solving skills."
+      </p>
+      <p class="text-sm text-gray-600">- Chris</p>
+    </div>
+  }
+
+  @section("Services", "") {
+    <div class="max-w-3xl mx-auto flex gap-2 flex-wrap">
+      @service("Websites")
+      @service("Mobile Apps")
+      @service("API Development")
+      @service("Hosting")
+      @service("Data Aggregation")
+      @service("Reporting")
+      @service("Analytics")
+      @service("Email Automation")
+      @service("Microservices")
+      @service("Web Scraping")
+      @service("API Integrations")
+      @service("Payment Collection")
+      @service("Responsive Design")
+      @service("System Migration")
+      @service("Process Automation")
+    </div>
+  }
+
+  @section("Contact Me", "bg-gray-200") {
+    <p class="text-gray-700">Interested in working together? Reach out!</p>
+    <div class="pt-8" id="contact">
+      @contact.ContactForm()
+    </div>
+  }
+}
+
+templ section(title string, class string) {
+  <section class={fmt.Sprintf("py-12 px-4 %s", class)}>
+    <div class="max-w-3xl mx-auto">
+      <h2 class="text-2xl font-bold mb-4">{title}</h2>
+      {children...}
     </div>
   </section>
+}
 
-  <section id="contact" class="bg-gray-200 py-8 px-4">
-    <div class="container mx-auto">
-      <h2 class="text-2xl font-bold mb-4">Contact Me</h2>
-      <p class="text-gray-700">Interested in working together? Reach out!</p>
-      <div class="pt-8">
-        @contact.ContactForm()
-      </div>
-    </div>
-  </section>
+templ service(text string) {
+  <p
+    class="bg-cyan-500 text-white py-2 px-4 rounded-md hover:bg-cyan-700 focus:outline-none focus:shadow-outline-cyan active:bg-cyan-800"
+  >
+    {text}
+  </p>
 }
